--- a/package.json
+++ b/package.json
@@ -11,25 +11,37 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.2",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "fp-ts": "^2.3.1",
-    "io-ts": "^2.0.2",
-    "io-ts-types": "^0.5.3",
-    "monocle-ts": "^2.0.0",
-    "newtype-ts": "^0.3.2",
-    "type-ts": "^1.0.2"
+    "fp-ts": "^2.4.1",
+    "io-ts": "^2.0.4",
+    "io-ts-types": "^0.5.5",
+    "jsonwebtoken": "^8.5.1",
+    "monocle-ts": "^2.0.1",
+    "newtype-ts": "^0.3.3",
+    "pg-connection-string": "^2.1.0",
+    "pg-ts": "github:ivivona/pg-ts#master",
+    "slug": "^2.1.0",
+    "type-ts": "^1.0.2",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.6",
+    "@types/node": "^13.1.7",
+    "@types/pg": "^7.14.1",
+    "@types/pg-connection-string": "^2.0.0",
+    "@types/slug": "^0.9.1",
+    "@types/validator": "^12.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
-    "ts-node": "^8.5.4",
+    "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "tsd": "^0.11.0",
     "typescript": "^3.7.4"
