--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "output/index.js",
   "scripts": {
     "start": "ts-node index.ts",
-    "debug": "ts-node-dev --inspect --respawn --transpileOnly index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "debug": "ts-node-dev --inspect --respawn --transpileOnly index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,36 +13,36 @@
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "fp-ts": "^2.4.1",
-    "io-ts": "^2.0.4",
+    "fp-ts": "^2.4.3",
+    "io-ts": "^2.0.6",
     "io-ts-types": "^0.5.5",
     "jsonwebtoken": "^8.5.1",
-    "monocle-ts": "^2.0.1",
+    "monocle-ts": "^2.1.0",
     "newtype-ts": "^0.3.3",
     "pg-connection-string": "^2.1.0",
-    "pg-ts": "github:ivivona/pg-ts#master",
+    "pg-ts-v2": "^1.0.1",
+    "servant-ts": "^1.0.0",
     "slug": "^2.1.1",
     "type-ts": "^1.0.2",
-    "validator": "^12.1.0"
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.2",
-    "@types/jsonwebtoken": "^8.3.6",
-    "@types/node": "^13.1.7",
+    "@types/jsonwebtoken": "^8.3.7",
+    "@types/node": "^13.7.0",
     "@types/pg": "^7.14.1",
     "@types/pg-connection-string": "^2.0.0",
     "@types/slug": "^0.9.1",
     "@types/validator": "^12.0.1",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
-    "tsd": "^0.11.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.5"
   }
 }
